# KR-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  KR-Engine.natvis  README.md
Builds/: CMakeLists.txt  DLL.cpp  Main.cpp  Mesh.cpp  Mesh.hpp  MeshFile.cpp  MeshFile.hpp  Nodes.cpp  NodesOld.cpp  PVP.cpp  SSS.cpp  Test.cpp
PCH/: CMakeLists.txt  VMALib.cmake  pch.cpp  pch.hpp
Source/Kaey/Engine/: AssetMap.hpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Scene.cpp  Scene.hpp  Utility.hpp  Utils.cpp  Utils.hpp
Source/Kaey/Shader/: GlslShader.cpp  GlslShader.hpp  NodeShader.cpp  NodeShader.hpp  Shader.cpp  Shader.hpp
